<resources>
    <string name="app_name">AD340-team-project</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email_signUp_Info">Email</string>
    <string name="already_have_account">Already have Account?</string>
    <string name="sign_in_crate_accountAct">SIGN IN</string>
    <string name="hintPassowrd">Password Create Account</string>
    <string name="hintNameCreateAccount">Name</string>
    <string name="create_account_Text">Create Account</string>
    <string name="logo_image">Logo Image</string>
    <string name="profile_placeholder">PROFILE</string>
    <string name="host_placeholder">HOSTS</string>
    <string name="profile_image">profile_photo</string>
    <string name="required">\ is required\</string>
    <string name="wrongFormat">\ is in wrong format\</string>
    <string name="tooYoung">Sorry!! you are too young</string>
    <string name="tooOld">too old</string>
    <string name="signup">you are close to sign up!!</string>
    <string name="select">You Selected This Host!</string>


    <!-- FRAGMENTS -->
    <string name="fragTitlePROFILE">PROFILE</string>
    <string name="fragTitleHOSTS">HOST</string>
    <string name="fragTitleSETTINGS">SETTINGS</string>
    <string name="email">Email</string>
    <string name="you_dog_s_name">Name of your dog</string>
    <string name="your_dog_s_age">Age of your dog</string>
    <string name="description">Description</string>
    <string name="login">LOGIN</string>
    <string name="your_dog_s_name">Name of your dog</string>
    <string name="dog_s_breed">Breed of your dog</string>
    <string name="size">Size of your dog</string>
    <string name="login_button">LOGIN</string>
    <string name="dogName_display">Name:</string>
    <string name="ageOfDog_display">Age of Dog:</string>
    <string name="typ_of_bread_Display">Type of Breed:</string>
    <string name="dog_size_Display">Dog Size:</string>
    <string name="description_Display">Description:</string>
    <string name="match">Match</string>
    <string name="back">BACK</string>
    <string name="select_the_host">Select Host</string>
    <string name="Description">Description of the dog can be found here. You can read more about the hosts and their preferred dogs, size, and price.</string>

    <string name="name_of_dog_placeholder">Name of Dog</string>
    <string name="seattle_wa">Seattle, WA</string>
    <string name="profile_details_title">Profile Details:</string>
    <string name="age_of_dog_placeholder">Age of Dog</string>
    <string name="bread_of_dog_placeholder">Bread of Dog:</string>
    <string name="size_of_dog_placeholder">Size of Dog</string>
    <string name="email_placeholder">Email:</string>
    <string name="log_out_title">LOG OUT</string>
    <string name="host_name_placeholder">Host Name</string>
    <string name="host_price_placeholder">Host Price</string>
    <string name="host_location_placeholder">Host Location</string>
    <string name="available_placeholder">Available</string>
    <string name="view_host_title">View Host</string>
    <string name="small_size">small</string>
    <string name="medium_size">medium</string>
    <string name="big_size">big</string>
    <string name="per_night_priceholder">$45 per night</string>
    <string name="availability_title">Availability</string>
    <string name="_01_02_2020">01/02/2020</string>
    <string name="contact_information_title">Contact information</string>
    <string name="phone_206_987_6543">Phone: 206-987-6543</string>
    <string name="select_date_btn_title">Select Date</string>
    <string name="jenny_kunte_jak_ashuraliev_farhad_bahrehmand">Jenny Kunte, Jak Ashuraliev, Farhad Bahrehmand</string>

</resources>