<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="true"
    android:paddingBottom="@dimen/dim10"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/dim10"
        android:background="@color/cardview_light_background"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height250"
            android:background="@drawable/profile_img"
            android:scaleType="centerCrop"
            android:contentDescription="@string/profile_image" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim10"
            android:text="@string/name_of_dog_placeholder"
            android:layout_marginStart="@dimen/margin4"
            android:layout_marginEnd="@dimen/margin4"
            android:textSize="@dimen/size22"
            android:textColor="@color/headings"
            android:textStyle="bold"
            android:layout_below="@+id/profile_photo" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop10"
            android:text="@string/Description"
            android:textSize="@dimen/size16"
            android:layout_marginStart="@dimen/margin4"
            android:layout_marginEnd="@dimen/margin4"
            android:layout_below="@+id/tv_name" />

        <TextView
            android:id="@+id/tvState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop10"
            android:text="@string/seattle_wa"
            android:textSize="@dimen/size16"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/margin4"
            android:layout_marginEnd="@dimen/margin4"
            android:layout_toEndOf="@id/tv_name"
            android:layout_alignParentEnd="true"
            android:gravity="right"
            android:layout_below="@+id/profile_photo" />

        <View
            android:id="@+id/viewLine"
            android:layout_below="@id/tv_description"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height1"
            android:layout_marginTop="@dimen/marginTop10"
            android:background="@color/colorLightGrey" />

        <TextView
            android:id="@+id/profileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size16"
            android:layout_marginTop="@dimen/marg15"
            android:text="@string/profile_details_title"
            android:layout_marginStart="@dimen/margin4"
            android:layout_marginEnd="@dimen/margin4"
            android:textStyle="bold"
            android:layout_below="@id/viewLine"
            android:textColor="@color/headings" />

        <TextView
            android:id="@+id/ageTitle"
            android:layout_width="@dimen/width120"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size16"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/margin4"
            android:layout_below="@id/profileTitle"
            android:layout_marginTop="@dimen/marginTop10"
            android:text="@string/ageOfDog_display" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop10"
            android:textSize="@dimen/size16"
            android:text="@string/age_of_dog_placeholder"
            android:layout_toEndOf="@id/ageTitle"
            android:layout_below="@+id/profileTitle" />

        <TextView
            android:id="@+id/tvBreedTitle"
            android:layout_width="@dimen/width120"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin4"
            android:layout_marginTop="@dimen/marginTop10"
            android:text="@string/typ_of_bread_Display"
            android:textStyle="bold"
            android:textSize="@dimen/size16"
            android:layout_below="@id/tv_age" />

        <TextView
            android:id="@+id/tv_bread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop10"
            android:text="@string/bread_of_dog_placeholder"
            android:layout_toEndOf="@id/tvBreedTitle"
            android:textSize="@dimen/size16"
            android:layout_below="@+id/tv_age" />

        <TextView
            android:id="@+id/tvDogSizeTitle"
            android:layout_width="@dimen/width120"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop10"
            android:layout_below="@id/tvBreedTitle"
            android:text="@string/dog_size_Display"
            android:layout_marginStart="@dimen/margin4"
            android:textSize="@dimen/size16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop10"
            android:text="@string/size_of_dog_placeholder"
            android:textSize="@dimen/size16"
            android:layout_toEndOf="@id/tvDogSizeTitle"
            android:layout_below="@+id/tvBreedTitle" />

        <TextView
            android:id="@+id/tvEmailTitle"
            android:layout_width="@dimen/width120"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin4"
            android:layout_marginTop="@dimen/marginTop10"
            android:layout_below="@id/tv_size"
            android:text="@string/email_placeholder"
            android:textSize="@dimen/size16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop10"
            android:text="nameofmydog@hotmail.com"
            android:textSize="@dimen/size16"
            android:layout_toEndOf="@id/tvDogSizeTitle"
            android:layout_below="@+id/tvDogSizeTitle" />

        <View
            android:id="@+id/viewLine2"
            android:layout_below="@id/tv_email"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height1"
            android:layout_marginTop="@dimen/margingTop25"
            android:layout_marginBottom="@dimen/margin50"
            android:background="@color/colorLightGrey" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/height40dp"
            android:background="@color/headings"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size18"
            android:layout_alignParentBottom="true"
            android:text="@string/log_out_title"
            android:onClick="backToMainActivity"/>

    </RelativeLayout>

</ScrollView>