<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/headings"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="150"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/secondLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin70"
        android:layout_marginTop="@dimen/margin70"
        android:layout_gravity="center"
        android:layout_weight="4"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/size14" />

        <EditText
            android:id="@+id/dogName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_dog_s_name"
            android:inputType="textPersonName"
            android:textSize="@dimen/size14" />

        <EditText
            android:id="@+id/dogAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_dog_s_age"
            android:inputType="number"
            android:textSize="@dimen/size14" />

        <EditText
            android:id="@+id/dogBreed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dog_s_breed"
            android:inputType="text"
            android:textSize="@dimen/size14" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size38"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/size"
                android:textSize="@dimen/size12" />

            <Spinner
                android:id="@+id/dogSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <EditText
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/description"
            android:textSize="@dimen/size14"/>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="goToProfile"
            android:textAlignment="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/projectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Jenny Kunte, Jak Ashuraliev, FArhad BAhrehmand"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin24"
        />
</RelativeLayout>